[tool.poetry]
name = "gdrive-seemore"
version = "0.1.0"
description = ""
authors = ["Mike Heavers <mheavers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
flask = "2.2.5"
requests = "^2.31.0"
connexion = {extras = ["flask"], version = "^3.1.0"}
python-dotenv = "^1.0.0"
mypy = "^1.4.1"
google-api-python-client = "^2.100.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
gunicorn = "^22.0.0"
aiohttp = "^3.9.4"
nltk = "^3.8.1"

[tool.poetry.group.development.dependencies]
black = "^24.3.0"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
